src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Complete__c</fullName>
        <formula>NOT(
  ISBLANK(FirstName) &amp;&amp; 
  ISBLANK(LastName) &amp;&amp;
  ISBLANK(Phone) &amp;&amp;
  ISBLANK(Email) &amp;&amp;
  ISBLANK(MailingAddress)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE(MOD(Today()- Date(1900,1,7),7), 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,&quot;Wednesday&quot; ,4,&quot;Thursday&quot; ,5,&quot;Friday&quot; ,6,&quot;Saturday&quot; ,&quot;Sunday&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <formula>AND(DoNotCall,HasOptedOutOfEmail)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <formula>OR( BEGINS(Title, &quot;Chief&quot;) , CONTAINS(Title, &quot;President&quot;) , CONTAINS(Title, &quot;Executive&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>CASE( Account.Rating ,
        &quot;Hot&quot;, 1,
        &quot;Warm&quot;, IF( Executive__c , 1, 2),
        &quot;Cold&quot;,IF( Executive__c , 2, 3),
3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK( AccountId )) ,
MailingPostalCode &lt;&gt; Account.ShippingPostalCode )</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Contact Mailing Postal Code must be the same as the Account Shipping Postal Code</errorMessage>
    </validationRules>
</CustomObject>